--- a/x-up/package.json
+++ b/x-up/package.json
@@ -14,7 +14,7 @@
     "format:check": "prettier --ignore-unknown --check '**/*'",
     "lint": "npm run format:check",
     "build": "terser --module --compress --mangle -o index.min.js index.js",
-    "publish": ""
+    "prepack": "npm run build"
   },
   "dependencies": {
     "prettier": "^2.2.1"
