--- a/.github/workflows/x-up-checks.yaml
+++ b/.github/workflows/x-up-checks.yaml
@@ -18,8 +18,7 @@ jobs:
           persist-credentials: false
       - uses: actions/setup-node@v2
         with:
-          node-version: "15"
-          check-latest: true
+          node-version: latest
       - run: cd x-up && npm ci
   lint:
     name: Lint
@@ -32,8 +31,7 @@ jobs:
           key: ${{ github.sha }}
       - uses: actions/setup-node@v2
         with:
-          node-version: "15"
-          check-latest: true
+          node-version: latest
       - run: cd x-up && npm run lint
   build:
     name: Build
@@ -46,6 +44,5 @@ jobs:
           key: ${{ github.sha }}
       - uses: actions/setup-node@v2
         with:
-          node-version: "15"
-          check-latest: true
+          node-version: latest
       - run: cd x-up && npm run build
