--- a/.github/workflows/x-up-checks.yaml
+++ b/.github/workflows/x-up-checks.yaml
@@ -18,7 +18,7 @@ jobs:
           persist-credentials: false
       - uses: actions/setup-node@v2
         with:
-          node-version: latest
+          node-version: "15"
       - run: cd x-up && npm ci
   lint:
     name: Lint
@@ -31,7 +31,7 @@ jobs:
           key: ${{ github.sha }}
       - uses: actions/setup-node@v2
         with:
-          node-version: latest
+          node-version: "15"
       - run: cd x-up && npm run lint
   build:
     name: Build
@@ -44,5 +44,5 @@ jobs:
           key: ${{ github.sha }}
       - uses: actions/setup-node@v2
         with:
-          node-version: latest
+          node-version: "15"
       - run: cd x-up && npm run build
