--- a/.github/workflows/x-up-checks.yaml
+++ b/.github/workflows/x-up-checks.yaml
@@ -32,7 +32,20 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "15"
-      - run: cd x-up && npm run lint
+      - run: cd x-up && npm run --if-present lint
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: install
+    steps:
+      - uses: actions/cache@v2
+        with:
+          path: "./*"
+          key: ${{ github.sha }}
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "15"
+      - run: cd x-up && npm run --if-present test
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -45,4 +58,4 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "15"
-      - run: cd x-up && npm run build
+      - run: cd x-up && npm run --if-present build
