--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,8 +15,23 @@ jobs:
           package="$(echo '${{github.ref}}' | sed 's/refs\/tags\///' | sed 's/@.*//')" &&
           echo "::set-output name=package::$package"
   publish:
-    name: Publish
+    name: Prepare code and publish
     runs-on: ubuntu-latest
     needs: check
+    defaults:
+      run:
+        working-directory: ${{needs.check.outputs.package}}
     steps:
-      - run: cd "${{needs.check.outputs.package}}" && echo "Publish $(pwd)"
+      - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "15"
+      - run: npm ci
+      - run: npm run --if-present lint
+      - run: npm run --if-present test
+      - run: npm run --if-present build
+      - run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
