--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,6 +28,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "15"
+          registry-url: "https://registry.npmjs.org"
       - run: npm ci
       - run: npm run --if-present lint
       - run: npm run --if-present test
