Drop detect log group from publish workflow

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,11 +12,9 @@ jobs:
     steps:
       - id: info
         run: |
-          echo "::group::Detect package" &&
           package="$(echo '${{github.ref}}' | sed 's/refs\/tags\///' | sed 's/@.*//')" &&
           echo "::set-output name=package::$package" &&
-          echo "Detected package $package" &&
-          echo "::endgroup::"
+          echo "Detected package $package"
   publish:
     name: Prepare code and publish
     runs-on: ubuntu-latest
